Fix spacing Add discount line

--- a/src/OrderTable/index.scss
+++ b/src/OrderTable/index.scss
@@ -16,6 +16,8 @@
   flex-direction: column;
   align-items: center;
   vertical-align: middle;
+  justify-content: center;
+  gap: wc.spacing(sm);
 
   .content {
     display: flex;
